完成4 - 图片模块

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,13 +4,17 @@ server:
     context-path: /api
 spring:
   application:
-    name: mo-picture-backend
+    name: yu-picture-backend
     # 数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/yu_picture
     username: root
     password: 123456
+  # 开放更大的文件上传体积
+  servlet:
+    multipart:
+      max-file-size: 10MB
 mybatis-plus:
   configuration:
     # MyBatis 配置
@@ -33,3 +37,13 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.momo.yupicturebackend.controller
+## 对象存储配置（需要从腾讯云获取）
+#cos:
+#  client:
+#    host: xxx
+#    secretId: xxx
+#    secretKey: xxx
+#    region: xxx
+#    bucket: xxx
+# 对象存储配置（需要从腾讯云获取）
+
